# facial-unet-segmentation

./: PROJECT_STRUCTURE.md  README.md  pyproject.toml
configs/: train_config.yaml
data/: class_info.yaml
scripts/: convert_helen.py  download_helen_dataset.py  evaluate.py  split_dataset.py  train.py
unet_pkg/: __init__.py
unet_pkg/datasets/: __init__.py  dataset.py
unet_pkg/metrics/: __init__.py  core.py
unet_pkg/models/: __init__.py  attention_unet.py
