[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "facial-unet-seg"
version = "0.1.0"
description = "Attention U-Net 面部语义分割课程项目"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["unet_pkg", "unet_pkg.models", "unet_pkg.datasets", "unet_pkg.metrics"]
